Sửa trang customer care, ticket

--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -204,7 +204,7 @@
                 </div>
             </section>
 
-            <section class="col-lg-7 cmtbox"  style="background-color: gray  ; border-left: 1px solid lightgray">
+            <section class="col-lg-6 cmtbox"  style="background-color: gray  ; border-left: 1px solid lightgray">
                 <div>
                     <div class="box-body chat">
                         <div  id="postx-detail" class="postdetail">
@@ -226,8 +226,31 @@
                     </div>
                 </div>
             </section>
-        <section class="col-lg-2">
+        <section class="col-lg-2"style="padding: 0; margin:10px 0px 0px 0px;">
+            <div style="max-height: 50vh; height: 50vh">
+            <ul class="nav nav-tabs" style="overflow: hidden;width: 100vh;display: inline-block; margin-bottom: 0">
+                <li class="active"><a data-toggle="tab" href="#home">Ticket Detail</a></li>
+                <li><a data-toggle="tab" href="#menu1" ">History</a></li>
+                <li><a data-toggle="tab" href="#menu1">Converstation</a></li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane active" id="tab_1" style="max-height: 100%">
 
+
+                </div>
+
+                <div class="tab-pane" id="tab_2" style="max-height: 100%">
+                </div>
+
+                <div class="tab-pane" id="tab_3" style="max-height: 100%">
+
+                </div>
+
+            </div>
+            </div>
+            <div style="background-color: gray; height: 50vh; width: 100vh">
+asdasdasd
+            </div>
         </section>
 
     </div>
