--- a/scc-mvc/src/main/resources/static/css/scc-post.css
+++ b/scc-mvc/src/main/resources/static/css/scc-post.css
@@ -161,7 +161,10 @@ overflow: scroll;
   padding: 0px 0px 0px 0px;
   margin-right: 0px;
 }
-
+.cmtList :hover
+{
+    background-color: lightblue;
+}
 .cmtList .cmtContent > img {
   width: 50px;
   height: 50px;
