--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -226,14 +226,14 @@
                     </div>
                 </div>
             </section>
-        <section class="col-lg-2"style="padding: 0; margin:10px 0px 0px 0px;">
-            <div style="max-height: 50vh; height: 50vh">
-            <ul class="nav nav-tabs" style="overflow: hidden;width: 100vh;display: inline-block; margin-bottom: 0">
+        <section class="col-lg-2"style="padding: 0; margin:0px 0px 0px 0px; border-left: 1px solid lightgray;height: 100vh">
+            <div>
+            <ul class="nav nav-tabs" style="overflow: hidden;width: 100vh;display: inline-block; margin-top: 10px">
                 <li class="active"><a data-toggle="tab" href="#home">Ticket Detail</a></li>
-                <li><a data-toggle="tab" href="#menu1" ">History</a></li>
-                <li><a data-toggle="tab" href="#menu1">Converstation</a></li>
+                <li><a data-toggle="tab" href="#menu1">History</a></li>
+                <li><a data-toggle="tab" href="#menu1">Reply</a></li>
             </ul>
-            <div class="tab-content">
+            <div class="tab-content" style="height: 100vh;background-color: white; width: 100vh; margin-top: -5px">
                 <div class="tab-pane active" id="tab_1" style="max-height: 100%">
 
 
@@ -248,9 +248,7 @@
 
             </div>
             </div>
-            <div style="background-color: gray; height: 50vh; width: 100vh">
-asdasdasd
-            </div>
+
         </section>
 
     </div>
