--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -88,7 +88,7 @@
 
                         var cmtId= "'"+postId+"_"+data[index].id+"'";
                         $('#comment-box').append(
-                                    '<div  class="cmt" onclick="replyToComment('+cmtId+')">'
+                                '<div  class="cmt">'
                                 +'<div class="col-lg-10 cmtContent">' +
                                 '<img onload="http://localhost:8080/img/user_img.jpg" src="http://graph.facebook.com/'+data[index].createdBy+'/picture" alt="user image">'
                                 +'<p class="message">'
@@ -98,11 +98,9 @@
                                 +jQuery.format.prettyDate( new Date(data[index].createdAt))
                                 +'</small>'
                                 +' </a>'
-//                                +'<small class="fa fa-smile-o">'+data[index].sentimentScore+'</small>'
-
                                 +'<p style="margin-left: 65px;margin-top: -10px ">'+data[index].content+'</p>'
-                                //+'</p> <div class="btn btn-sm btn-primary pull-right" onclick="$(this).parent().append((createReply()))">Reply</div></div>')
                                 +'</p>'
+                                +'<button  onclick="replyToComment('+cmtId+')" class="btn btn-default btn-xs inline" style="margin-left: 65px;margin-top: -10px; "><span class="glyphicon glyphicon-send" style="color:gray "  title="Reply to this comment"   data-placement="bottom" data-toggle="tooltip" ></span></button>'
                                 +'</div>'
                                 +'<div class="col-lg-2" style="margin-top: 30px">' +'<small class="fa fa-smile-o pull-right" style="font-size: 20px; color: #50D050"></small>'
                                 +'</div>'
@@ -121,18 +119,6 @@
                 data: { postId: postId },
                 dataType: "json",
                 success: function (data){
-
-//                    $('#post-detail').html(
-//                            '<div class="item"> <img src="http://localhost:8080/img/user_img.jpg" alt="user image"> <p class="message">'
-//                            +'<a class="name">'
-//                            +'<small class="text-muted pull-right">'
-//                            +jQuery.format.date( new Date(data.createdAt),'dd/MM/yyyy')+' at '+jQuery.format.date( new Date(data.createdAt),'HH:mm')
-//                            +'</small>'+
-//                            'Author Name'
-//                            +'</a>' +
-//                            data.content+'</p></div>'
-//                    );
-
                     $('#post-content').html(data.content);
                     $('#post-author').html(data.createdByName);
                     $('#post-like-count').html('<span class="glyphicon glyphicon-thumbs-up"></span>&nbsp;'+data.likesCount+'&nbsp;Likes');
