--- a/scc-mvc/src/main/resources/templates/login.html
+++ b/scc-mvc/src/main/resources/templates/login.html
@@ -166,7 +166,7 @@ body{
 			<div>Socical Customer<span>Care</span></div>
 		</div>
 		<div class="login">
-            <form action="loginacc" method="post">
+            <form action="doLogin" method="post">
                 <input type="text" placeholder="username" name="txtUsername"/>
                 <input type="password" placeholder="password" name="txtPassword"/>
                 <input type="submit" value="Login"/>
