--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -46,7 +46,7 @@
             </li>
             <!--Manage Page -->
             <li class="treeview">
-                <a href="#">
+                <a href="/page/index">
                     <i class="fa fa-file-o"></i>
                     <span>Manage Page</span>
                     <span class="pull-right-container">
@@ -56,7 +56,7 @@
             </li>
             <!--Manage FaceBook Account -->
             <li class="treeview">
-                <a href="manageFacebookAccount">
+                <a href="/facebook-account/index">
                     <i class="fa fa-facebook"></i>
                     <span>Manage FB Account</span>
                     <span class="pull-right-container">
