--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -26,7 +26,7 @@
             </li>
             <!--Customer Care -->
             <li class="treeview">
-                <a href="#">
+                <a href="/customercare">
                     <i class="fa fa-ambulance"></i>
                     <span>Customer Care</span>
                     <span class="pull-right-container">
